--- a/src/component/NoteList.css
+++ b/src/component/NoteList.css
@@ -2,6 +2,7 @@
     flex: 1;
     list-style: none;
     margin: 0;
+    min-width: 0; /* Fix for text overflow in flex child. */
     overflow: auto;
     padding: 0;
 }
@@ -20,7 +21,7 @@
     height: var(--space-x-large);
     line-height: var(--space-x-large);
     overflow: hidden;
-    padding: 0 var(--space-medium);
+    padding: 0 calc(var(--space-x-large) + var(--space-small)) 0 var(--space-medium);
     text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
